fixed paycrave spacing

--- a/css/paycrave.css
+++ b/css/paycrave.css
@@ -39,9 +39,46 @@ ul {
  text-align: center;
 } */
 
+.banner-text {
+  /*font-size: 30px;
+  padding-top: 50px;*/
+
+  margin-bottom: 10px;
+  padding-bottom: 0px;
+}
+
 .sub-text {
   text-align: center;
+  margin-bottom: 0px;
 }
+
+.cta {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.cta .button {
+  text-decoration: none;
+  text-align: center;
+  font-family: 'Roboto';
+  font-weight: 400;
+  border: 2px solid black;
+  padding: 15px 40px;
+  border-radius: 4px;
+  justify-self: center;
+  grid-column: 1/-1;
+  margin-bottom: 0px;
+  margin-top: 20px;
+
+ }
+
+
+ .cta .button:hover {
+   color: white;
+   background-color: #39BD9C;
+   border: 2px solid #39BD9C;
+ }
+
 
 .header-pic {
   width: ;
@@ -94,6 +131,10 @@ grid-column: 4/10;
 }
 
 */
+
+figure {
+  margin-top: 0px;
+}
 figure img {
   width:100%;
   justify-self: center;
@@ -137,14 +178,47 @@ grid-column: 1/-1;
 
 @media (max-width: 700px) {
 
+  .banner-text {
+    /*font-size: 30px;
+    padding-top: 50px;*/
+
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+  }
+
+  .sub-text {
+    text-align: center;
+    margin-bottom: -10px;
+  }
+
+  .cta {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .cta .button {
+    text-decoration: none;
+    text-align: center;
+    font-family: 'Roboto';
+    font-weight: 400;
+    border: 2px solid black;
+    padding: 15px 40px;
+    border-radius: 4px;
+    justify-self: center;
+    grid-column: 1/-1;
+    margin-bottom: 20px;
+    margin-top: 10px;
+
+   }
+
   .full-width-container {
     grid-column: 1/-1;
-    padding: 10px;
+    padding: 15px;
   }
 
   .text-container {
   grid-column: 1/-1;
-  padding: 10px;
+  padding: 15px;
   }
 
   .disappear {
@@ -169,11 +243,11 @@ grid-column: 1/-1;
   display: none;
 }
 
-  .banner-text {
+ .banner-text {
     /*font-size: 30px;
     padding-top: 50px;*/
-    line-height: 50px;
-    margin-bottom: 0;
+/*    line-height: 50px;
+    margin-bottom: 0px; */
   }
 }
 
