--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,11 @@ p {
   height: 100vh;
 }
 
-
+.italic {
+  font-family: "Roboto";
+  font-style: italic;
+  font-weight: 400;
+}
 
 
 header {
